# umi-sampler

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  run-umi.sh
src/: AudioProcessor.cpp  AudioProcessor.h  Engine.cpp  Engine.h  OscBridge.cpp  OscBridge.h  Sampler.cpp  Sampler.h  SamplerEngine.cpp  SamplerEngine.h  SerialLinux.h  SerialService.h  main.cpp
